--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,11 @@ test=pytest
 
 [metadata]
 description-file = README.md
+
+[build_sphinx]
+source-dir = docs/
+build-dir = docs/_build
+all_files = 1
+
+[upload_sphinx]
+upload-dir = doc/_build/html
