--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,4 @@
 [pytest]
-testpaths = tests
+norecursedirs = build .* {arch} *dist *.egg
+addopts = --doctest-modules --doctest-glob='*.rst' --ignore=setup.py
+doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE
