Skip venv for circle

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-norecursedirs = build .* {arch} *dist *.egg
+norecursedirs = build venv .* {arch} *dist *.egg
 addopts = --doctest-modules --doctest-glob='*.rst' --ignore=setup.py
 doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE
