--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,35 @@
+[metadata]
+name = mainline
+summary = Simple yet powerful python dependency injection for py2/py3k
+description-file = README.rst
+home-page = https://github.com/akatrevorjay/mainline
+author = Trevor Joynson
+author_email = github@skywww.net
+license = GPL
+keywords = 
+    dependency
+    injection
+    ioc
+classifier =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    Intended Audience :: Information Technology
+    License :: OSI Approved :: GNU General Public License (GPL)
+    Operating System :: OS Independent
+    Programming Language :: Python
+    Topic :: Software Development
+    Topic :: Software Development :: Libraries
+
+[pbr]
+autodoc_tree_index_modules = True
+autodoc_index_modules = True
+
+[files]
+packages = 
+    mainline
+
 [aliases]
 test=pytest
-
-[metadata]
-description-file = README.rst
 
 [build_sphinx]
 source-dir = docs/
