--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
-envlist = py{27,35}-test,pypy-test
-;envlist = py{27,35}-test,pypy-test,py-docs
+# circle, man come on /b/ruh
+;envlist = py{27,35,36,37}-test,pypy-test,py-docs
+envlist = py{27,35}-test
 
 ## Skips setup.py usage; for non-package testing
 #skipsdist = true
