--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 # circle, man come on /b/ruh
-;envlist = py{27,35,36,37}-test,pypy-test,py-docs
-envlist = py{27,35}-test
+;envlist = py{27,36,37}-test,pypy-test,py-docs
+; envlist = py{27,36,37}-test
+envlist = py{27,36}-test
 
 ## Skips setup.py usage; for non-package testing
 #skipsdist = true
