--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,8 @@
-# machine:
-#   pre:
-#     - cd /opt/circleci/.pyenv; git pull
-#   python:
-#     version: 3.6.0
+machine:
+  pre:
+    - cd /opt/circleci/.pyenv; git pull
+  python:
+    version: 3.6.0
 
 dependencies:
   post:
