--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,11 @@
 machine:
   pre:
     - cd /opt/circleci/.pyenv; git pull
-  python:
-    version: 3.7.0
+  # python:
+  #   version: 3.7.0
 
 dependencies:
   post:
-    - pyenv local 3.7.0 3.6.5 2.7.14
+    - pyenv local 3.6.5 2.7.14
+    # - pyenv local 3.7.0 3.6.5 2.7.14
 
