This takes ages, but it works, although 3.7 refuses to compile on circle of course

--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,7 @@ machine:
     version: 3.6.5
 
 dependencies:
-  post:
-    - pyenv local 3.6.5 2.7.12
+  override:
+    - pip install tox tox-pyenv
+    - pyenv local 2.7.12 3.5.0 3.6.5
 
