--- a/circle.yml
+++ b/circle.yml
@@ -7,5 +7,5 @@ machine:
 dependencies:
   override:
     - pip install tox tox-pyenv
-    - pyenv local 2.7.12 3.5.0 3.6.5
+    - pyenv local 2.7.12 3.6.5
 
