--- a/tox.ini
+++ b/tox.ini
@@ -30,8 +30,8 @@ passenv = *
 usedevelop = true
 
 deps =
-    test: -rrequirements/test.txt
-    docs: -rrequirements/docs.txt
+    test: -e .[tests]
+    docs: -e .[docs]
     analysis: flake8 flake8-import-order
 
 ;# Allow overriding of the test command
