--- a/setup.cfg
+++ b/setup.cfg
@@ -38,3 +38,12 @@ all_files = 1
 
 [upload_sphinx]
 upload-dir = doc/_build/html
+
+[extras]
+docs =
+    sphinx
+tests =
+    pytest
+    mock
+    coveralls
+
