--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 # circle, man come on /b/ruh
 ;envlist = py{27,36,37}-test,pypy-test,py-docs
 ; envlist = py{27,36,37}-test
-envlist = py{2,3}-test
+envlist = py3-test
 
 ## Skips setup.py usage; for non-package testing
 #skipsdist = true
@@ -10,16 +10,13 @@ envlist = py{2,3}-test
 [testenv]
 # python exec
 ;basepython =
-;    2.7: python2.7
 ;    3.5: python3.5
-;    pypy2: pypy
 ;    pypy3: pypy3
 ;    docs: python
 ;    pep8: python
 
 ;# {toxworkdir} defaults to .tox
 ;envdir =
-;    py2: {toxworkdir}/py2
 ;    py3: {toxworkdir}/py3
 
 # Pass full env
@@ -38,7 +35,6 @@ deps =
 ;commands = {posargs:py.test}
 
 commands=
-    ;py2,pypy: py.test --ignore 'tests/mainline/*py3*'
     ;py3: py.test
     test: coverage run --source=mainline -m pytest
     ;test: - coverage run --source=mainline setup.py test
